<resources>
    <string name="app_name">The Forum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bidding">Bidding</string>
    <string name="add">Add</string>
    <string name="projects">Projects</string>
    <string name="account">Account</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="press_no">Press no to stay in the app. Press yes to close the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_to">Welcome to The Forum</string>
    <string name="sign_in">Sign In!</string>
    <string name="email_number">Email</string>
    <string name="pin">Pin</string>
    <string name="steric">*</string>
    <string name="forget_pin">Forget Pin?</string>
    <string name="don_t_have_an_acc">Don\'t have an account? Create</string>
    <string name="logo">Logo</string>
    <string name="create">Create</string>
    <string name="continue_to_login">Continue to Login</string>
    <string name="continue_to_facebook">Continue to FaceBook</string>
    <string name="continue_to_google">Continue to Google</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_with_email_or_phone">Login with Email Or Phone</string>
    <string name="back">Back</string>
    <string name="create_an_account">Create an Account</string>
    <string name="your_name">Your Name</string>
    <string name="_4_digit_pin">4-digit-pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="intro">Pakistan 1st Online Real Estate</string>
    <string name="market_place">market place</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="background">Background</string>
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="fb_login_protocol_scheme">fb764021561251411</string>
    <string name="appartment_no">Apartment No 4</string>
    <string name="marla">5 Marla</string>
    <string name="bidding_end">Live bidding end in</string>
    <string name="bidding_finish">Bidding Time Finish</string>
    <string name="_23_24">23:24</string>
    <string name="time_dot">:</string>
    <string name="days">days</string>
    <string name="hrs">hrs</string>
    <string name="mins">mins</string>
    <string name="sec">sec</string>
    <string name="starting_price">Starting Price : 26,456,464</string>
    <string name="bid">9/20 Bid</string>
    <string name="bid_now">Bid Now</string>
    <string name="pkr">PKR 2.5 Crore</string>
    <string name="per_sq_feet">90–150 per sq feet</string>
    <string name="executive_office_sq_feet">Executive Office 90–150 sq feet in Bahria town phase 7</string>
    <string name="details">Details</string>
    <string name="property_id">Property ID</string>
    <string name="_765489">765489</string>
    <string name="type">Type</string>
    <string name="executive_office">Executive Office</string>
    <string name="price">Price</string>
    <string name="city">City</string>
    <string name="islamabad">Islamabad</string>
    <string name="area">Area</string>
    <string name="sq_ft">90–150 sq ft</string>
    <string name="purpose">Purpose</string>
    <string name="sale">Sale</string>
    <string name="location">Location</string>
    <string name="bahria_town_phase_7">Bahria Town Phase 7</string>
    <string name="guest">Guest</string>
    <string name="view_profile">View Profile</string>
    <string name="saved_favorite">Saved/Favorite</string>
    <string name="shared_with_others">Shared with others</string>
    <string name="invite_friends_amp_family"><![CDATA[Invite/Friends & Family]]></string>
    <string name="rate_forum_app">Rate Forum App</string>
    <string name="about_app">About App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="stop_notification">Stop Notification</string>
    <string name="how_it_works">How it works?</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorite_image">favorite image</string>
    <string name="friends_invite_image">friends invite image</string>
    <string name="rate_image">rate image</string>
    <string name="policy_image">policy image</string>
    <string name="terms_image">terms image</string>
    <string name="notification_image">notification image</string>
    <string name="works_image">works image</string>
    <string name="search_properties">Search Properties…</string>
    <string name="property_type">Property Type</string>
    <string name="price_range">Price Range</string>
    <string name="_0">0</string>
    <string name="to">To</string>
    <string name="any">Any</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View All</string>
    <string name="current_bidding">Current Bidding</string>
    <string name="upcoming_bidding">Upcoming Bidding</string>
    <string name="for_sale">For Sale</string>
    <string name="for_buy">For Buy</string>
    <string name="multan">Multan</string>
    <string name="category">Category</string>
    <string name="apartments">Apartments</string>
    <string name="plots">Plots</string>
    <string name="commercial_image">commercial image</string>
    <string name="commercial">Commercial</string>
    <string name="hot_selling">Hot Selling</string>
    <string name="appartment_image">apartment image</string>
    <string name="plot_image">plot image</string>
    <string name="lower_price">Lower Price</string>
    <string name="sort">Sort</string>
    <string name="showing_1_20_of_1220_projects">Showing 1–20 of 1220 Projects</string>
    <string name="found_in_pakistan">found in Pakistan</string>
    <string name="time_left">Time left: 04:38:47</string>
    <string name="view">View</string>
    <string name="price_26_876_200">Price : 26,876,200</string>
    <string name="lower_ground">Lower Ground</string>
    <string name="area_413_48_sq">Area: 413.48 sq</string>
    <string name="pre_launch_23_113_532">Pre-Launch: 23,113,532</string>
    <string name="down_payment_5_778_383">Down Payment: 5,778,383</string>
    <string name="heart_image">heart image</string>
    <string name="_1_bedroom">1 Bedroom</string>
    <string name="low_price">Low Price</string>
    <string name="date">Date: 27–2–2022</string>
    <string name="bahria_phase_7">Bahria Phase 7</string>
    <string name="contact_us">Contact Us</string>
    <string name="sub_cat_image">sub cat image</string>
    <string name="all">All</string>
    <string name="appartments">Apartments</string>
    <string name="time_5_days_left">Time: 5 Days Left</string>
    <string name="bid_finish">Bidding Time Finish!</string>
    <string name="buy_now">Buy Now</string>

    <string-array name="labels">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
<!--        <item>13</item>-->
<!--        <item>14</item>-->
<!--        <item>15</item>-->
<!--        <item>16</item>-->
<!--        <item>17</item>-->
<!--        <item>18</item>-->
<!--        <item>19</item>-->
<!--        <item>20</item>-->
<!--        <item>21</item>-->
<!--        <item>22</item>-->
<!--        <item>23</item>-->
<!--        <item>24</item>-->
<!--        <item>25</item>-->
<!--        <item>26</item>-->
<!--        <item>27</item>-->
<!--        <item>28</item>-->
<!--        <item>29</item>-->
<!--        <item>30</item>-->
<!--        <item>31</item>-->
<!--        <item>32</item>-->
<!--        <item>33</item>-->
<!--        <item>34</item>-->
<!--        <item>35</item>-->
<!--        <item>36</item>-->
<!--        <item>37</item>-->
<!--        <item>38</item>-->
<!--        <item>39</item>-->
<!--        <item>40</item>-->
<!--        <item>41</item>-->
<!--        <item>42</item>-->
<!--        <item>43</item>-->
<!--        <item>44</item>-->
<!--        <item>45</item>-->
<!--        <item>46</item>-->
<!--        <item>47</item>-->
<!--        <item>48</item>-->
    </string-array>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>

    <string name="number_picker_formatter">%02d</string>
    <string-array name="labels_nextpay">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <!--        <item>13</item>-->
        <!--        <item>14</item>-->
        <!--        <item>15</item>-->
        <!--        <item>16</item>-->
        <!--        <item>17</item>-->
        <!--        <item>18</item>-->
        <!--        <item>19</item>-->
        <!--        <item>20</item>-->
        <!--        <item>21</item>-->
        <!--        <item>22</item>-->
        <!--        <item>23</item>-->
        <!--        <item>24</item>-->
        <!--        <item>25</item>-->
        <!--        <item>26</item>-->
        <!--        <item>27</item>-->
        <!--        <item>28</item>-->
        <!--        <item>29</item>-->
        <!--        <item>30</item>-->
        <!--        <item>31</item>-->
        <!--        <item>32</item>-->
        <!--        <item>33</item>-->
        <!--        <item>34</item>-->
        <!--        <item>35</item>-->
        <!--        <item>36</item>-->
        <!--        <item>37</item>-->
        <!--        <item>38</item>-->
        <!--        <item>39</item>-->
        <!--        <item>40</item>-->
        <!--        <item>41</item>-->
        <!--        <item>42</item>-->
        <!--        <item>43</item>-->
        <!--        <item>44</item>-->
        <!--        <item>45</item>-->
        <!--        <item>46</item>-->
        <!--        <item>47</item>-->
        <!--        <item>48</item>-->
    </string-array>
</resources>