<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_bidding"
        android:padding="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="4dp"
            android:text="@string/are_you_sure"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="4dp"
            android:text="@string/press_no" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dia_exi_yes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:text="@string/yes"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_dia_exi_no"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/no"
                android:textColor="@color/black" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
